--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,13 @@
 
                 <li class="project-item">
                     <a class="project-link" href="#">
-                    <img  class="project-image" src="./images/technokriak.jpg" alt="Технокряк вебсайти" width="370">
+                    <div class="project-overlay"> 
+                       <img  class="project-image" src="./images/technokriak.jpg" alt="Технокряк вебсайти" width="370">
+                          <div class="project-box">
+                             <p class="project-text"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                        вичерпні відомості про компанію чи приватну особу. </p>
+                          </div>
+                        </div>
                     <div class="project-border">
                     <h2 class="projects-title"> Технокряк </h2>
                     <p class="projects-filter"> Веб сайт </p>
