--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <h1 class = "hero-title">Ефективні рішення для <br>вашого бізнесу</h1>
             <button data-modal-open type="button" class = "hero-button"> Замовити послугу </button>
 
-            <div class="backdrop" data-modal>
+            <div class="backdrop is-hidden" data-modal>
                 <div class="modal">
                     <button data-modal-close type="button" class="modal-button">
-                        <svg class="modal-cross" width="30" height="30">
+                        <svg class="modal-cross" width="11" height="11">
                             <use href="./images/cross_close.svg#cross"> </use>
                         </svg>
                     </button>
